# cbd-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  SDtest.sh  Snakefile  analyse_temporelle.py  analysis.py  bench-tool.nf  bifrosttest.sh  bifrosttimetest.nf  blight_analysis.py  blight_contains.sh  blight_mprof.sh  buildthemisto.nf  cbl.sh  cmake_install.cmake  contains  contains.cpp  contains_for_space  contains_for_space.cpp  cuttlemeta.nf  donnees_ecoli.sh  generate-benchmarks.nf  jelly_mprof.sh  metagraphtest.nf  parser.py  parser_blight.py  prepare-data.nf  querrymetagraph.nf  querrysshash.nf  requestthemisto.nf  sequencegen.py  sortKmer.nf  sshashquerry.nf  sshashtest.nf  successors  successors.cpp  (+3 more)
CBl_scripts/: CMakeLists.txt  FileSorter.cpp  KmerListGenerator.cpp  contains.cpp  contains_for_space.cpp  successors.cpp  successors_for_space.cpp
analysis/: query-times.ipynb
data/: list  list-metasoil
modules/: cbd.nf  kmer_utils.nf  themisto.nf
scripts/: averaging.py  mprof_parser.py
